src/style.css
:root {
    --header-height: 40px;
    --padding: 25px;

    --border-radius: 2px;

    --light-gray: rgb(235, 235, 235);
    --green: #32936F;

    --red: rgb(203, 68, 61);
    --dark-red: rgb(124, 22, 13);
    --gray: rgb(248, 248, 248);

    --text-gray: rgb(186, 186, 186);

    --icon-size: 23px;

    --icon-grey-filter: invert(86%) sepia(3%) saturate(5%) hue-rotate(314deg) brightness(87%) contrast(90%);

    --icon-hover-filter: invert(44%) sepia(41%) saturate(1044%) hue-rotate(316deg) brightness(79%) contrast(103%);

    --yellow-icon-filter: invert(61%) sepia(86%) saturate(524%) hue-rotate(1deg) brightness(106%) contrast(104%);

    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
}

body {
    width: 100vw;
    height: 100vh;

    overflow: hidden;
}

.header {
    height: var(--header-height);

    background-color: var(--red);
    filter: brightness(110%);

    display: flex;
    align-items: center;
}

.header-home-button {
    height: 30px;
    margin-left: 2px;

    padding: 0px 20px 0px 20px;
 
    filter: invert(11%) sepia(61%) saturate(4165%) hue-rotate(353deg) brightness(95%) contrast(97%);
}

.header-home-button:hover {
    filter: invert(11%) sepia(61%) saturate(4165%) hue-rotate(353deg) brightness(75%) contrast(97%);
}

.header-spacer {
    flex: 1;
}

.header-add-button {
    height: 30px;
    padding: 0px var(--padding) 0px 20px;

    filter: invert(11%) sepia(61%) saturate(4165%) hue-rotate(353deg) brightness(95%) contrast(97%);
}

.header-add-button:hover {
    filter: invert(11%) sepia(61%) saturate(4165%) hue-rotate(353deg) brightness(75%) contrast(97%);
}

.content-container {
    width: 100vw;
    height: calc(100vh - var(--header-height));

    display: flex;
}

/* sidebar */

.sidebar {
    width: 230px;
    padding-top: 15px;
    
    display: flex;
    flex-direction: column;

    background-color: var(--gray);
}

.sidebar-item {
    height: 40px;
    width: 100%;
    padding-left: var(--padding);

    display: flex;
    align-items: center;
    gap: 10px;

    background-color: var(--gray);
    border: none;

    min-height: 40px;
}

.sidebar-item:hover {
    background-color: var(--light-gray);
}

.sidebar-item:active {
    background-color: var(--light-gray);
}

.sidebar-item-icon {
    height: var(--icon-size);
}

.sidebar-item-label {
    font-size: 17px;

    line-height: 1.2; /* necessary to prevent text cropping */
    
    white-space: nowrap;
    text-overflow: ellipsis;

    overflow: hidden;
    max-width: calc(100% - 50px);
}

.sidebar-item.add-project {
    color: var(--text-gray);
    font-weight: 500;
}

.sidebar-item.add-project>img {
    filter: var(--icon-grey-filter);
}

/* main content */

.main-content {
    flex: 1;

    display: flex;
    flex-direction: column;
    gap: 15px;

    overflow: hidden;
}

.list-header-container {
    padding: 40px 0px 0px 40px;

    display: flex;
    align-items: center;
}

.list-title {
    font-size: 21px;
    font-weight: 500;

    line-height: 1.2; /* necessary to prevent text cropping */
    
    white-space: nowrap;
    text-overflow: ellipsis;

    overflow: hidden;
    max-width: calc(100% - 65px);
}

.list-settings-icon {
    height: 20px;
    width: 20px;

    filter: var(--icon-grey-filter);

    position: absolute;
    right: 40px;
}

.list-settings-icon:hover {
    filter: var(--icon-hover-filter);
}

.todo-list {
    margin-left: 40px;
    margin-right: 40px;
    
    flex: 1;
    display: flex;
    flex-direction: column;
}

.list-item {
    padding: 15px 0px 25px 0px;
    display: flex;
    align-items: center;

    position: relative;

    border-bottom: 2.5px solid var(--light-gray);
}

.list-item-label {
    position: absolute;
    left: 35px;

    font-weight: 400;
    font-size: 17px; 
    line-height: 1.2; /* necessary to prevent text cropping */
    
    white-space: nowrap;
    text-overflow: ellipsis;

    overflow: hidden;
    max-width: calc(100% - 90px);
}

.list-item-icon , .list-item-menu , .list-item-flag {
    height: 23px;
    filter: invert(100%) sepia(0%) saturate(7494%) hue-rotate(148deg) brightness(79%) contrast(78%);
}

.list-item-menu:hover {
    filter: invert(44%) sepia(41%) saturate(1044%) hue-rotate(316deg) brightness(79%) contrast(103%);
}

.list-item-flag.active {
    filter: var(--yellow-icon-filter);
}

.list-item-spacer {
    flex: 1;
}

.list-item-flag {
    margin-right: 10px;
}

.list-item-date {
    position: absolute;
    top: 20px;

    font-size: 12px;

    white-space: nowrap;
}

.add-list-item {
    height: 40px;
    
    padding: 10px 0px 10px 0px;

    display: flex;
    align-items: center;

    background-color: white;
    border: none;
}

.add-list-item-icon {
    height: 23px;
    filter: var(--icon-grey-filter);
}

.add-list-item:hover>.add-list-item-icon {
    filter: var(--icon-hover-filter);
}

.add-list-item-label {
    margin-left: 10px;
    
    color: var(--text-gray);

    font-weight: 500;
    font-size: 17px;
}

.add-list-item:hover>.add-list-item-label {
    color: var(--red);
}

/* modals */

.add-project-modal , .add-item-modal , .item-modal , .project-settings-modal {
    --modal-height: 102px;
    --modal-width: 300px;
    height: var(--modal-height);
    width: var(--modal-width);

    box-sizing: border-box;
    padding: 10px;
    padding-bottom: 25px;

    position: absolute;
    top: calc(50vh - var(--modal-height) / 2);
    left: calc(50vw - var(--modal-width) / 2);

    background-color: white;

    visibility: hidden;

    display: flex;
    flex-direction: column;

    border-radius: 4px;
    gap: 0px;

    box-shadow: 2px 2px 5px 2px gray;
}

.add-project-modal.active , .add-item-modal.active , .item-modal.active , .project-settings-modal.active {
    visibility: visible;
}

.add-project-modal-options-container , .project-settings-modal-options-container , .item-modal-options-container , .add-item-modal-options-container {
    display: flex;
    gap: 10px;

    justify-content: right;
}

.project-settings-modal , .item-modal {
    height: 65px;
}

/* add-project-modal */

.add-project-modal {
    height: 105px;
}

.add-project-modal-name-input , .add-item-modal-name-input {
    height: 30px;
    font-size: 20px;
    background-color: white;
    border: none;
    margin: 3px 0px 5px 4px;
}

.add-project-modal-name-input:focus , .add-item-modal-name-input:focus {
    outline: none;
}

.add-project-modal-cancel-button , .add-project-modal-add-button , .project-settings-modal-cancel-button , .project-settings-modal-delete-button , .item-modal-options-container>button , .add-item-modal-options-container>button {
    height: 25px;
    border-radius: 4px;

    font-size: 12px;
    font-weight: 500;
}

.add-project-modal-cancel-button , .project-settings-modal-cancel-button , .item-modal-cancel-button , .add-item-modal-cancel-button {
    width: 60px;
    border: 1px solid white;
    background-color: white;
}

.add-project-modal-add-button , .project-settings-modal-delete-button , .item-modal-delete-button , .add-item-modal-add-button {
    width: 85px;

    color: white;
    background-color: var(--red);
    border: 1px solid var(--red);
    border-radius: 4px;
}

.add-project-modal-cancel-button:hover , .add-project-modal-add-button:hover , .project-settings-modal-cancel-button:hover , .project-settings-modal-delete-button:hover , .item-modal-options-container>button:hover , .add-item-modal-options-container>button:hover {
    filter: brightness(95%);
}

.add-project-modal-footer , .add-item-modal-footer , .project-settings-modal-footer , .item-modal-footer {
    height: 20px;
    width: 100%;

    position: absolute;
    bottom: 0px;
    left: 0px;

    border-radius: 0px 0px 4px 4px;
    background-color: var(--light-gray);
}

/* add-item-modal */

.add-item-modal {
    height: 150px;
}

.add-item-modal-date-input {
    height: 20px;
    margin: 0px 6px 0px 6px;
}

.add-item-modal-flag-container {
    display: flex;
    gap: 5px;
    align-items: center;
    margin: 7px 0px 0px 6px;
}

.add-item-modal-flag-label {
    font-size: 15px;
}

.add-item-modal-add-button {
    width: 70px;
}

/* item modal */

.item-modal-options-container , .project-settings-modal-options-container {
    display: flex;
    gap: 10px;
}

.item-modal-cancel-button , .item-modal-delete-button {
    height: 25px;
}

/* project settings modal */

.project-settings-modal-delete-button {
    width: 100px;
}

/* overlay */

.overlay {
    height: 100vh;
    width: 100vw;
    position: absolute;
    top: 0;

    background-color: black;
    opacity: 30%;

    visibility: hidden;
}

.overlay.active {
    visibility: visible;
}

